# multigpu_raster

./: .gitignore  .pre-commit-config.yaml  README.md  job.slurm  pyproject.toml  run.py  test_script.py  tiling.py
.github/workflows/: tests.yaml
src/conf/: config.yaml
src/multi_gpu_raster/: dataset.py  inference.py  main.py  model.py  tiling.py  util.py
src/multi_gpu_raster/conf/: config.yaml
test/: fixtures.py  test_dataloader.py  test_dataset.py  test_inference.py  test_model.py  test_util.py
